Add cloud ping API completed (#191)
