# api/server/httputils/httputils.go
@@ -17,19 +17,27 @@ limitations under the License.
 package httputils
 
 import (
-	"fmt"
-	"io/ioutil"
 	"net/http"
-	"time"
 
 	"github.com/gin-gonic/gin"
-	"github.com/golang-jwt/jwt/v4"
 )
 
 type Response struct {
 	Code    int         `json:"code"`              // 返回的状态码
 	Result  interface{} `json:"result,omitempty"`  // 正常返回时的数据，可以为任意数据结构
 	Message string      `json:"message,omitempty"` // 异常返回时的错误信息
+}
+
+// HttpOK 正常返回
+type HttpOK struct {
+	Code   int    `json:"code" example:"200"`
+	Result string `json:"result" example:"any result"`
+}
+
+// HttpError 异常返回
+type HttpError struct {
+	Code    int    `json:"code" example:"400"`
+	Message string `json:"message" example:"status bad request"`
 }
 
 func (r *Response) Error() string {
@@ -65,61 +73,4 @@ func NewResponse() *Response {
 	return &Response{
 		Code: http.StatusBadRequest,
 	}
-}
-
-type Claims struct {
-	jwt.RegisteredClaims
-
-	Id   int64  `json:"id"`
-	Name string `json:"name"`
-	Role string `json:"role"`
-}
-
-// GenerateToken 生成 token
-func GenerateToken(uid int64, name string, jwtKey []byte) (string, error) {
-	// Generate jwt, 临时有效期 360 分钟
-	nowTime := time.Now()
-	expiresTime := nowTime.Add(360 * time.Minute)
-	claims := &Claims{
-		RegisteredClaims: jwt.RegisteredClaims{
-			ExpiresAt: jwt.NewNumericDate(expiresTime), // 过期时间
-			IssuedAt:  jwt.NewNumericDate(nowTime),     // 签发时间
-			NotBefore: jwt.NewNumericDate(nowTime),     // 生效时间
-		},
-		Id:   uid,
-		Name: name,
-	}
-
-	token := jwt.NewWithClaims(jwt.SigningMethodHS256, claims)
-	return token.SignedString(jwtKey)
-}
-
-func ParseToken(tokenStr string, jwtKey []byte) (*Claims, error) {
-	token, err := jwt.ParseWithClaims(tokenStr, &Claims{}, func(t *jwt.Token) (interface{}, error) {
-		return jwtKey, nil
-	})
-	if err != nil {
-		return nil, err
-	}
-
-	if claims, ok := token.Claims.(*Claims); ok && token.Valid {
-		return claims, nil
-	}
-
-	return nil, fmt.Errorf("failed to parse invailed token")
-}
-
-// ReadFile 从请求中获取指定文件内容
-func ReadFile(c *gin.Context, f string) ([]byte, error) {
-	fileHeader, err := c.FormFile(f)
-	if err != nil {
-		return nil, err
-	}
-	file, err := fileHeader.Open()
-	if err != nil {
-		return nil, err
-	}
-	defer file.Close()
-
-	return ioutil.ReadAll(file)
 }
